# Dídac Rios # 28-03-2012 16:48:20 #
	- formulari de registre

# Dídac Rios # 28-03-2012 12:13:42 #
	- aclarint tema rutes, per treballar millor, espero que en servidor i amb pagina arrel funcioni tot OK també

# Dídac Rios # 28-03-2012 10:52:30 #
	- Començo a passar els inc cap i inc peu també com a TEMA

# Dídac Rios # 28-03-2012 10:09:24 #
	- Productes controlador i vista enllestit
	- TODO js dels thumbs i ampliacio
	- TODO ficar a cistella

# Dídac Rios # 27-03-2012 12:09:12 #
	- estils bàsics d'estructuració, algo d'idiomes (sempre català)

# Dídac Rios # 26-03-2012 12:11:25 #
	- Iniciem MVC

# Dídac Rios # 23-03-2012 17:47:31 #
	- producte.php
	Semantica i estructura al respecte


# Dídac Rios # 23-03-2012 12:26:57 #
- pagines.php
	Des de la configuració (backoffice) es poden crear pàgines, que es mostraran al peu de pàgina, si n'hi ha

# Dídac Rios # 22-03-2012 12:29:24 #
- 3 nivells de categories
	