@@ -1,10 +1,13 @@
 /* the humans responsible & colophon */
 /* humanstxt.org */
 
+/* AUTOR */
+
+	Dídac Rios
 
 /* SITE */
   Standards: HTML5, CSS3
   Components: HTML%shiv, jQuery, initializR
-  Software:
+  Software: Geany 0.21
 
 
