@@ -1,0 +1,3 @@
+<?php
+$idioma["REMITENT REGISTRE"] = "Nou compte d'usuari";
+?>
