@@ -1,0 +1,136 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/strict.dtd">
+
+<html>
+
+<head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<title></title>
+
+</head>
+
+<body>
+
+	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
+
+<tbody>
+
+<tr>
+
+<td style="text-align:right"><a title="{nom_botiga}" href="{web_url}"><img style="border: none;" src="{web_logo}" alt="{nom_botiga}" /></a></td>
+
+</tr>
+
+<tr>
+
+<td>&nbsp;</td>
+
+</tr>
+
+<tr>
+
+<td align="left">Hola <strong style="color: #bcce0a;">{nom} {cognom}</strong>, gràcies per registrar-te a <strong>{nom_botiga}</strong>. Hauràs d'activar el compte per a poder treballar amb la nostra pàgina.</td>
+
+</tr>
+
+<tr>
+
+<td>&nbsp;</td>
+
+</tr>
+
+<tr>
+
+<td style="background-color: #b0a7a0; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Detalls d'accés</td>
+
+</tr>
+
+<tr>
+
+<td>&nbsp;</td>
+
+</tr>
+
+<tr>
+
+<td align="left"><strong>Correu: </strong> {correu}</td>
+
+</tr>
+
+<tr>
+
+<td><strong>Contrasenya:</strong> {password}</td>
+
+</tr>
+
+<tr>
+
+<td align="left">&nbsp;</td>
+
+</tr>
+
+<tr>
+
+<td align="left"><strong>Enllaç de validació:</strong> <a href="{link_validacio}">{link_validacio}</a></td>
+
+</tr>
+
+
+<tr>
+
+<td>&nbsp;</td>
+
+</tr>
+
+<tr>
+
+<td style="background-color: #b0a7a0; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Adreça</td>
+
+</tr>
+
+<tr>
+
+<td>&nbsp;</td>
+
+</tr>
+
+<tr>
+  
+  <td>
+    
+  <table style="width: 100%; font-size: 11px; color: #374953;">
+    
+  <tbody>
+    
+  <tr style="background-color: #b9babe; text-transform: uppercase;">
+    <th style="text-align: left; padding: 0.3em 1em;">ADREÇA</th>
+    </tr>
+    
+  <tr>
+    
+  <td style="padding: 0.5em 0 0.5em 0.5em; background-color: #ebecee;">{dir_entrega}</td>
+    
+  </tr>
+    
+  </tbody>
+    
+  </table>
+    
+  </td>
+  
+</tr>
+
+<tr>
+
+<td>&nbsp;</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
+</body>
+
+</html>
