@@ -1,3 +1,9 @@
+# Dídac Rios # 29-03-2012 08:55:28 #
+	- formulari validacions a servidor, en blanc, nif, comprovacio de correu (ha de ser únic)
+
+# Dídac Rios # 28-03-2012 18:35:18 #
+	- TODO - formulari de registre - jQuery comprovacions insitu
+
 # Dídac Rios # 28-03-2012 16:48:20 #
 	- formulari de registre
 
